fixed footer and spacing issues

--- a/content/style.css
+++ b/content/style.css
@@ -50,3 +50,7 @@ footer {
 h3 {
     color: cadetblue;
 }
+
+.float-left {
+    float: left;
+}
